devops/dev2/tekton/05-event-listener-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: widget-app-event-listener
  namespace: widgety-pipelines
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: widget-app-event-listener
spec:
  path: /
  to:
    kind: Service
    name: widget-app-event-listener
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
